# gcal-cmd-tool

./: README.md  gcal-cmd-tool.py  pyproject.toml
gcal_cmd_tool/: main.py
gcal_cmd_tool/libs/: acl.py  calendars.py
libs/: acl.py
