[tool.poetry]
name = "gcal-cmd-tool"
version = "0.1.0"
description = "A command line tool to manage Google Calendars"
authors = ["Alexandre Santos <ajvsms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

