[tool.poetry]
name = "gcal-cmd-tool"
version = "0.1.1"
description = "A command line tool to manage Google Calendars"
authors = ["Alexandre Santos <ajvsms@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gcal-cmd-tool = "gcal_cmd_tool.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.1"}
google-api-python-client = "^2.42.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

